--- a/src/components/home/profilestep/Timeline.module.css
+++ b/src/components/home/profilestep/Timeline.module.css
@@ -40,23 +40,29 @@ a {
 }
 
 /* Wrapper for all cards */
+.cardContainer {
+  max-width: 1200px; /* Match your navbar/logo layout width */
+  margin: 0 auto;     /* Center it */
+  padding: 0 20px;    /* Match navbar side padding */
+}
+
 .stepsWrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 30px;
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
+  gap: 15px;
 }
+
 
 /* Flip Card Styles */
 .card {
-  width: 260px;
-  height: 260px;
+  width: 270px;
+  height: 270px;
   perspective: 1000px;
   flex: 0 0 auto;
   border-radius: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .cardInner {
@@ -97,7 +103,7 @@ a {
 .cardBack {
   background: #f45b69;
   color: #fff;
-  transform: rotateY(180deg);
+  transform: rotateY(-180deg);
 }
 
 /* Icon */
