--- a/src/components/home/testimonihome/Testimonihome.module.css
+++ b/src/components/home/testimonihome/Testimonihome.module.css
@@ -2,7 +2,7 @@
     text-align: center;
     margin: 0 auto 40px;
     padding: 40px 20px;
-    background: #f9f9f9;
+    /* background: #f9f9f9; */
 }
 
 /* Main Title */
