--- a/src/components/home/heromain/Heromain.module.css
+++ b/src/components/home/heromain/Heromain.module.css
@@ -268,6 +268,12 @@
 
 
 /* Responsive Styles */
+@media (max-width: 1200px){
+ .carousel{
+    height: 75vh;
+ }
+}
+
 @media (max-width: 768px) {
     .hero header {
         padding-left: 20px;
